--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -96,7 +96,11 @@
 
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <img class="card-img-top" src="{{ event.post_image.url }}"/>
+            {% if event.post_images %}
+                <img class="card-img-top" src="{{ event.post_image.url }}"/>
+            {% else %}
+                <img class="card-img-top" src="{% static 'no_image.png' %}"/>
+            {% endif %}
             <div class="card-body">
               <p class="card-text"> {{ event.post_text }}</p>
               <div class="d-flex justify-content-between align-items-center">
